Fix connectionString prod

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,4 +43,6 @@ jobs:
             docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
             docker stop webapp || true
             docker rm webapp || true
-            docker run -d -p 80:8080 --name webapp ${{ secrets.DOCKER_USERNAME }}/miwebapp-imagen:latest
+            docker run -d -p 80:8080 \
+              -e ConnectionStrings__DefaultConnection="${{ secrets.DB_CONNECTION_STRING }}" \
+              --name webapp ${{ secrets.DOCKER_USERNAME }}/miwebapp-imagen:latest
