Fix. Se agrega webapp a una network para la conexion con sqlserver y se elimina el existente

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,9 @@ jobs:
           script: |
             docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
             docker stop webapp || true
+            docker rm webapp || true
+            docker network create webapp || true
             docker run -d -p 80:8080 \
               -e ConnectionStrings__MiWebAppContext="${{ secrets.DB_CONNECTION_STRING }}" \
+              --network webapp \
               --name webapp ${{ secrets.DOCKER_USERNAME }}/miwebapp-imagen:latest
