--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,11 @@ jobs:
       - name: Build and publish
         run: dotnet publish -c Release -o ./publish
 
+      - name: Print connection string
+        run: echo "Connection string: ${{ secrets.DB_CONNECTION_STRING }}"
+
       - name: Build Docker image
-        run: docker build --progress=plain -t miwebapp-imagen --build-arg CONN_STR="${{ secrets.DB_CONNECTION_STRING }}" ./
+        run: docker build --progress=plain -t miwebapp-imagen --build-arg CONN_STR="Server=sqlserver;Database=MiWebApp;User Id=sa;Password=Password#;" ./
 
       - name: Login to Docker Hub 
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
