--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,13 @@ jobs:
         with:
           dotnet-version: '9.0.x'
 
-      - name: Login to Docker Hub
+      - name: Build and publish
+        run: dotnet publish -c Release -o ./publish
+        
+      - name: Build Docker image
+        run: docker build --progress=plain -t miwebapp-imagen --build-arg CONN_STR="Server=sqlserver;Database=MiWebApp;User Id=sa;Password=Password#;" ./
+
+      - name: Login to Docker Hub 
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push to Docker Hub
@@ -33,6 +39,10 @@ jobs:
           port: ${{ secrets.SERVER_PORT }}
           script: |
             docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-            docker-compose -f docker-compose.yml pull web #  Descarga la imagen de tu app
-            DB_CONNECTION_STRING="${{ secrets.DB_CONNECTION_STRING }}" SA_PASSWORD="${{ secrets.SA_PASSWORD }}" docker-compose -f docker-compose.yml run migrations
-            docker-compose -f docker-compose.yml up -d  # Inicia o actualiza los contenedores
+            docker stop webapp || true
+            docker rm webapp || true
+            docker network create webapp || true
+            docker run -d -p 80:8080 \
+              -e ConnectionStrings__MiWebAppContext="${{ secrets.DB_CONNECTION_STRING }}" \
+              --network webapp \
+              --name webapp ${{ secrets.DOCKER_USERNAME }}/miwebapp-imagen:latest
